# clip_saver

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
clip_saver/: __init__.py  base.py  buffer.py  callbacks.py  clip_saver.py  connection.py  detection.py  frame.py
clip_saver/callbacks/: __init__.py  base.py  info.py  most_accurate_frame.py  tracker.py  video_saver.py
clip_saver/core/: __init__.py
clip_saver/core/callbacks/: __init__.py  most_accurate_frame.py  tracker.py  video_saver.py
clip_saver/core/datatypes/: __init__.py  frame.py
clip_saver/core/helpers/: __init__.py  parallel.py
clip_saver/core/video_source/: __init__.py  base.py  mp4.py  rtsp.py
clip_saver/datatypes/: rtsp_url.py
clip_saver/helpers/: __init__.py  image.py
clip_saver/video_source/: __init__.py  base.py  file.py  rtsp.py
clip_saver_old/: __init__.py  detection.py  frame.py  rtsp.py
notebooks/: 1 - Basics.ipynb
